--- a/manifestes/pod-mysql.yaml
+++ b/manifestes/pod-mysql.yaml
@@ -7,3 +7,6 @@ spec:
   containers:
     - name: mysql
       image: mysql:5.7
+      env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: tour
