--- a/app-P-Flask/deploy-pyth-Flask.yaml
+++ b/app-P-Flask/deploy-pyth-Flask.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: python-flask-deployement
+  Namespace: exo3
 spec:
   selector:
     matchLabels:
@@ -15,7 +16,7 @@ spec:
         app: flaskapp
     spec:
       containers:
-        - name: flaskapp
+        - name: fask
           image: smoualouks/projet1:1.0.0
           imagePullPolicy: IfNotPresent
           env:
@@ -34,6 +35,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: flaskapp # utilisé en résolution DNS
+  Namespace: exo3
 spec:
   type: NodePort # connectivité externe/interne
   selector:
